# auckbot_sim

./: .gitignore  README.md
auckbot_analysis/: CMakeLists.txt  FindMongoClient.cmake  package.xml
auckbot_analysis/launch/: nav_analysis.launch
auckbot_analysis/src/: automatron.cpp  model_fitting.py  nav_analysis.cpp
auckbot_control/: CMakeLists.txt  package.xml
auckbot_control/config/: auckbot_control.yaml
auckbot_description/: package.xml
auckbot_description/urdf/: auckbot.xacro
auckbot_gazebo/: CMakeLists.txt  package.xml
auckbot_gazebo/launch/: auckbot_mudcircle.launch
auckbot_gazebo/msg/: MotorCurrents.msg
auckbot_gazebo/src/: current_pub.cpp
auckbot_nav_analysis/: CMakeLists.txt  package.xml
auckbot_nav_analysis/launch/: nav_analysis.launch
auckbot_nav_analysis/src/: nav_analysis.cpp
auckbot_navigation/: CMakeLists.txt  package.xml
auckbot_navigation/launch/: amcl_localization.launch  amcl_move_base.launch  amcl_move_base_mudcircleII.launch  amcl_node.xml  gmapping.launch  gmapping_real_rob.launch  hokuyo.launch  move_base.xml  planner_setup_selector.sh  rgbd_localization.launch  rgbd_mapping.launch  turtlebot_move_base.launch
auckbot_navigation/param/: base_local_planner_params.yaml  base_local_planner_params_e.yaml  costmap_common_params.yaml  navi_config.sublime-workspace  rviz.rviz
auckbot_navigation/src/: nav_analysis.cpp  path_optimizer.cpp
auckbot_teleop/: CMakeLists.txt  package.xml
auckbot_teleop/lauch/: keyboard_teleop.launch
auckbot_teleop/src/: keyboard_teleop.cpp
edwa_local_planner/: edwa_local_planner.sublime-workspace
edwa_local_planner/src/: edwa_planner.cpp
